--- a/TA-biola_security_monitoring/default/inputs.conf
+++ b/TA-biola_security_monitoring/default/inputs.conf
@@ -1,9 +1,21 @@
+[script://$SPLUNK_HOME\etc\apps\TA-biola_security_monitoring\bin\check_update_stats.bat]
+# change to false to start the input, requires restart
+disabled = false 
+#host = 
+index = main
+# frequency to run the script
+interval = 43200 	
+source = check_update_stats.py
+sourcetype = securitystats
+index = os
+
 [script://$SPLUNK_HOME/etc/apps/TA-biola_security_monitoring/bin/check_update_stats.sh]
 # change to false to start the input, requires restart
 disabled = false 
 #host = 
 index = main
 # frequency to run the script
-interval = 14400 	
+interval = 43200 	
 source = check_update_stats.py
 sourcetype = securitystats
+index = os
